file images upload successful

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.4",
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^7.4.4",
     "antd": "^5.14.0",
