--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.22",
+    "lucide-react": "^0.561.0",
     "next": "^15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
